# MasterThesisIrisElpi

./: .gitignore  LICENSE  Makefile  Makefile.conf  README.md  _CoqProject  eiInd.opam  flake.nix  iris_hierarchy.dot  missing_join.dot
coq/elpi_test/: e_split1.elpi  e_split1.v  e_test1.v  modular_incr.v  stdpp.elpi  test.elpi  test_elpi.v
coq/hierarchy_builder_test/: hb_demo.v  hb_test1.v  hierarchy_5.dot
eIris/algebra/: CAMERA.v  COFE.v  EQU.v  OFE.v  RA.v
eIris/common/: datatypes.elpi  parser.elpi  stdpp.elpi  tokenize.elpi
eIris/proofmode/: apply.v  base.v  inductive.v  inductiveDB.v  intros.v  monoProper.v  proper.v  reduction.v  split.v  startProof.v  telescopes.v
eIris/tests/: FreshId.v  copy.v  example.v  feature_request.v  inductive.v  inductive_list.v  inductive_list_2.v  modify_bimono.v  sets.v  test.v  test2.v  test_elpi.v  twp.v
experiments/: #sets.v#  #twp.v#  channels.v  demo.v  indtests.v  intro_pattern_10.txt  intro_pattern_3.txt  intro_pattern_6.txt  intro_pattern_7.txt  intro_pattern_8.txt  linkedlistlist.v  mll.v  parse_timing.v  sets.v  test.v  twp.v  twp.v.crashcoqide
experiments/Timing/: generateIntropattern.py  intro_pattern_5.txt  parse_timing.v
latex/Proposal/: proposal.tex
latex/thesis/: Application.tex  Conclusion.tex  ElpiExperiments.tex  ElpiImplementation.bcf-SAVE-ERROR  ElpiImplementation.tex  ElpiTactics.bbl-SAVE-ERROR  ElpiTactics.tex  EvalElpi.tex  Fixpoints.tex  Induction.tex  Introduction.tex  IrisBackground.bbl-SAVE-ERROR  IrisBackground.bcf-SAVE-ERROR  (+18 more)
notes/: 01-05-24.md  22-05-24.md  26-04-24.md  31-05-2024.md
(+6 files in other folders)
