opam-version: "2.0"
name: "eiInd"
version: "dev"
synopsis: "Inductive predicate generation for Iris using Elpi"
description: """
A system of commands and tactics to generate least fixpoint inductive predicates 
in the Iris speartion logic. The project is created using the Elpi 
meta-programming language.
"""
maintainer: "Luko van der Maas eiInd@luko.dev"
authors: "Luko van der Maas eiInd@luko.dev"
license: "BSD-3-Clause"
homepage: "https://github.com/lukovdm/MasterThesisIrisElpi"
bug-reports: "https://github.com/lukovdm/MasterThesisIrisElpi/issues"
dev-repo: "https://github.com/lukovdm/MasterThesisIrisElpi.git"
depends: [ 
    "coq-iris" {>= "4.2"} 
    "coq-elpi" {>= "2.1.1"}
 ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]